# GenAI-Work-Instructions-Updater

./: .gitignore  README.md  pyproject.toml
data/: glossary.json  transformation_log.json  wi_metadata.json
data/ground_truth/: expected_edits.json  semantic_changes.json
data/standards/: acme_qs_v1.json  acme_qs_v1.md  acme_qs_v2.json  acme_qs_v2.md
data/work_instructions/: WI-001.md  WI-002.md  WI-003.md  WI-004.md  WI-005.md  WI-006.md  WI-007.md  WI-008.md  WI-009.md  WI-010.md  WI-011.md  WI-012.md  WI-013.md  WI-014.md  WI-015.md  WI-016.md  WI-017.md  WI-018.md  WI-019.md  WI-020.md  WI-021.md  WI-022.md  WI-023.md  WI-024.md  WI-025.md  WI-026.md  WI-027.md  WI-028.md  WI-029.md  WI-030.md
results/: baseline_vs_improved.md
results/baseline/: WI-001.json  WI-002.json  WI-003.json  WI-006.json  WI-007.json  WI-010.json  WI-011.json  WI-012.json  WI-013.json  WI-017.json  WI-018.json  WI-026.json  WI-028.json  metrics.md
results/improved/: WI-001.json  WI-002.json  WI-003.json  WI-004.json  WI-005.json  WI-006.json  WI-007.json  WI-008.json  WI-009.json  WI-010.json  WI-011.json  WI-012.json  WI-013.json  WI-014.json  WI-015.json  WI-016.json  WI-017.json  WI-018.json  WI-019.json  WI-020.json  WI-021.json  metrics.md  (+15 more)
scripts/: debug_retrieval.py  eval_semantic.py  export_standard_json.py  generate_figures.py  generate_results_doc.py  reproduce_results.py
src/: chunker.py  data_gen.py  eval.py  llm.py  pipelines.py  retriever.py  run_pipeline.py  schemas.py  validators.py
tests/: test_ground_truth.py  test_schemas.py  test_smoke.py  test_validators.py
